Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* Audio routing table is initially hidden in the dialog, when
  creating a new sampler channel.

* README requirements and configuration notes update.

* Disable OK button in sampler channel form and MIDI instrument
  form if no valid engine is selected (to avoid bothering newbie
  users with confusing LSCP syntax errors when using the UI the
  first time).

* Fixed creation of devices (don't try to set device parameters
  which the user did not touch in the device creation dialog).

* Added Windows file path support.

* Fixed win32/qmakefile and win32/config.h so that it compiles
  under win32.

* Qt4 port of the application.


0.1.5  2007-10-15 Five months later a fifth is heard.

* Added support for LSCP escape sequences to allow loading and
  mapping instrument files with special characters in their
  filename, as well as special characters for instrument names
  and instrument map names (requires LSCP v1.2 on sampler side).

* Added new button "Edit" to the channel strips, which probably
  does exactly what you think it does: it opens an appropriate
  instrument editor application; the channel instrument editor
  tool is also accessible from the main menu and toolbar.

* Application icon is now installed to ${prefix}/share/pixmaps;
  application desktop entry file is now included in installation;
  spec file (RPM) is now a bit more openSUSE compliant.

* Crash fix on double-clicking on a empty instrument list.


0.1.4  2007-05-04 Almost another year has gone by.

* Channel button colors have changed: yellow for mute and
  cyan for solo is now the rule, but note that this color
  highlighting is only rendered on some widget styles.

* Master sampler volume slider/spinbox combo is now featured.

* Initial support for sampler channel FX sends, while saving
  the session state, only at code-level.
